# Dashboard

./: .gitignore  .qmlls.ini  CMakeLists.txt  ChatController.cpp  ChatController.h  ChatModel.cpp  ChatModel.h  Chatbot.qml  Contact.qml  Main.qml  Map.qml  Music.qml  Note.qml  NoteFilterModel.cpp  NoteFilterModel.h  Weather.qml  WeatherController.cpp  WeatherController.h  main.cpp  note.cpp  note.h
.cache/clangd/index/: ChatController.cpp.5BA61FD6793EE452.idx  ChatController.h.BB7EFB95B7CC7C43.idx  ChatModel.cpp.FD2152F6D37CB42C.idx  ChatModel.h.464B37D4641FFEEB.idx  WeatherController.cpp.925195B11E693D1E.idx  WeatherController.h.6C9834E79D5AC7C7.idx  main.cpp.5069FB6092B6917E.idx
